--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "antd": "^4.20.2",
+    "axios": "^0.26.1",
     "react": "^18.0.0",
-    "react-bootstrap": "^2.3.1",
-    "react-dom": "^18.0.0",
-    "axios": "^0.26.1"
+    "react-bootstrap": "^2.4.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
